theme.css
/* ... */
.horizontal-tab-nav-item.is-active,
.vertical-tab-nav-item.is-active,
.nav-file-title.is-active,
.nav-folder-title.is-active {
  background-color: var(--interactive-accent);
  color: var(--nav-item-color-active);
}
.nav-folder.is-being-dragged-over {
  animation: 0.5s 1 alternate fadein;
  border-radius: var(--radius-s);
  border: solid 0.125rem var(--color-theme-dragTarget);
  background-color: var(--color-theme-dragTargetBg);
}
body:not(.is-grabbing) .tree-item.nav-file .tree-item-self.is-active:hover,
.horizontal-tab-nav-item.is-active:hover,
.vertical-tab-nav-item.is-active:hover,
.nav-file-title.is-active:hover,
.nav-folder-title.is-active:hover {
  background-color: var(--interactive-accent);
  color: var(--nav-item-color-active);
}
.nav-folder-title {
  font-weight: var(--font-medium);
}

/* UI Checkboxes */
.checkbox-container {
  background-color: var(--background-input);
}
.checkbox-container.is-enabled {
    background-color: var(--interactive-accent);
}
input[type=checkbox]:checked:after {
  /* Scale check mark with container in slides */
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

/********** Tooltips **********/

.tooltip {
  color: var(--theme-color-notice);
  background-color: var(--theme-color-noticeBg);
  padding: 0.5em 1em;
}

/********** Remote items **********/

.community-modal-search-results-wrapper,
.vault-list,
.sync-file-tree-container {
  background: var(--theme-gradient-topToBottom);
  border: 0;
  padding: 1.5em;
  gap: 1.5em;
}
.is-phone .community-modal-search-results-wrapper {
  padding: 1em;
  gap: 1em;
}
.vault-list-item,
.community-item,
.sync-file-tree-container>.list-item {
  background: var(--theme-color-communityItemBg);
  border-radius: var(--radius-m);
  border: none;
  box-shadow: var(--shadow-l);
  cursor: var(--cursor);
  padding: var(--size-4-3);
  position: relative;
}
.is-phone .vault-list-item,
.is-phone .community-item {
  border-radius: var(--radius-m);
  padding: 0.5em 1em;
}

.sync-file-tree-container>.list-item:hover,
.community-item:hover {
  background: var(--theme-color-communityItemBgHover);
  color: var(--nav-item-color-hover);
  font-weight: var(--nav-item-weight-hover);
}
.community-modal-search-results {
  padding: 0;
  gap: 1.5em;
}
.is-phone .community-modal-search-results {
  padding: 0;
  gap: 1em;
}

/********** Modals **********/

/* Default modal */

.modal {
  padding: 0;
  overflow: hidden;
}
.modal-title {
  /* Space for modal-close-button in line with title */
  padding: 0.5em calc(var(--size-2-3) + 2rem);
  /* Align with top position for modal-close-button */
  margin-top: 0;
  margin-bottom: 0;
  font-size: var(--font-ui-medium);
  line-height: 1.4em;
}
.modal-bg,
.modal,
.prompt,
.document-search-container {
  animation: 0.5s 1 alternate fadein;
}
.modal-content {
  margin: 0 0;
  /* Allow space for input borders */
  padding: var(--input-border-width) 2em;
  overflow: auto;
}
.modal-content p {
  margin: 0 0 0.5em 0;
}
.modal-content p:last-child {
  margin-bottom: 0;
}
.modal-content > hr {
  /* Used in the Manage Workspaces modal, but there's currently no way to target that. */
  border: none;
  margin: 1em 0;
}
.modal-button-container {
  margin-top: 0;
  padding: 1em 2rem;
}

.modal-content:has(.modal-button-container),
.modal-content:has(.button-container) {
  /* Sometimes the .modal-button-container is nested inside the .modal-content */
  overflow: scroll;
  background-color: var(--theme-color-modalContentBg);
  padding: 1em 2em;
}
.modal-content .modal-button-container {
  padding: 0;
}

/* Modals with sidebar layout */

.mod-sidebar-layout .modal-content {
  padding: 0;
  margin: 0;
}
.modal-sidebar,
.modal.mod-settings .vertical-tab-header {
  border-right: none;
  padding: 2.5em 1em 1em 1.5em;
  margin: 0;
  background: var(--theme-gradient-topToBottom);
  color: var(--theme-color-control);
  height: 100%;
  box-shadow: var(--shadow-s);
  z-index: 1;
}

/* Help modal */
.modal.mod-canvas-help .modal-content {
  height: 100%;
  overflow: scroll;
  padding-right: 1em;
}

/* Community modal */
.mod-community-modal .modal-sidebar {
  padding: 0;
}
.mod-community-modal .community-modal-controls {
  background: var(--theme-color-settingsBg);
  padding: 2.5em 1em 1em 0;
  box-shadow: var(--shadow-s);
  z-index: 1;
}
.mod-community-modal .modal-close-button {
  z-index: 2;
}
.mod-community-modal .community-modal-controls .setting-item {
  padding: 0;
  margin-bottom: 0.5em;
}
.mod-community-modal .community-modal-controls .setting-item:first-child {
  /* Filter control */
  max-width: var(--modal-community-sidebar-width);
  margin-bottom: 0.5em;
  padding-left: 1em;
  float: right;
}
.mod-community-modal .community-modal-controls .setting-item:first-child .setting-item-control {
  margin: 0;
}
.mod-community-modal .modal-content:has(.community-modal-details) .community-modal-controls .setting-item:first-child {
  float: none;
}
.community-modal-search-summary {
  margin: 0;
  padding: 0;
}
.community-modal-details {
  border: none;
}
.community-item {
  display: flex;
  flex-direction: column;
  gap: var(--size-2-1);
}
.community-item.is-selected,
.community-item.is-selected:hover {
  background: var(--theme-color-communityItemBgSelected)
}
.community-item.mod-active {
  background: var(--theme-color-communityItemBgActive)
}
.community-item.is-selected .flair.mod-pop,
.community-item.is-selected:hover .flair.mod-pop,
.community-item.mod-active .flair.mod-pop,
.community-item.mod-active:hover .flair.mod-pop {
  display: none;
}
/* ... */

